feat(tour-api): Add API call to wms product & producer
